# universal-weave

./: .gitignore  Cargo.toml  README.md  plans.txt
src/: contract.rs  dependent.rs  independent.rs  legacy_dependent.rs  lib.rs  versioning.rs  wrappers.rs
src/dependent/: contracts.rs  legacy_dependent.rs  loro.rs  mod.rs
src/dependent/loro/: contracts.rs  mod.rs
src/independent/: contracts.rs  mod.rs
tapestry-weave/: Cargo.toml
tapestry-weave-wasm/: Cargo.toml
tapestry-weave-wasm/src/: identifiers.rs  lib.rs  shared.rs  util.rs  weave.rs
tapestry-weave/src/: hashers.rs  lib.rs  treeless.rs  v0.rs  v1.rs  versioning.rs
tests/: dependent.rs  independent.rs  loro_dependent.rs
