[package]
name = "universal-weave"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "Unlicense"
description = "A flexible data format intended for \"loom\" implementations."
edition = "2024"

[features]
default = [ "rkyv" ]
rkyv = [
	"dep:rkyv",
]
#crdt = [
#	"rkyv",
#	"dep:crdts",
#	"dep:crdt_tree",
#]
wincode = [
	"dep:wincode",
]
legacy = [  ]
serde = [
	"dep:serde",
	"indexmap/serde",
]

[dependencies]
contracts = "0.6.7"
indexmap = "2.14.0"
rkyv = { version = "0.8.17", features = [
	"little_endian",
	"aligned",
	"pointer_width_32",
	"indexmap-2",
], optional = true }
#crdts = { version = "7.3.2", optional = true }
#crdt_tree = { version = "0.0.16", optional = true }
wincode = { version = "0.5.5", features = [
	"indexmap",
	"derive",
], optional = true }
serde = { version = "1.0.228", features = [
	"derive",
], optional = true }

#[dev-dependencies]
#proptest = "1.11.0"
