[package]
name = "universal-weave"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "Unlicense"
description = "A flexible data format intended for \"loom\" implementations."
edition = "2024"

[features]
default = [ "rkyv" ]
rkyv = [
	"dep:rkyv",
]
loro = [
	"rkyv",
	"dep:loro",
]
wincode = [
	"dep:wincode",
]
serde = [
	"dep:serde",
	"indexmap/serde",
]

# A deprecated version of DependentWeave used by `tapestry-weave`'s v0 format; Please don't use this!
legacy = [  ]


[dependencies]
contracts = "0.6.7"
indexmap = "2.14.0"
tailcall = "2.3.0"
stacksafe = "1.0.2"
rkyv = { version = "0.8.17", features = [
	"little_endian",
	"aligned",
	"pointer_width_32",
	"indexmap-2",
], optional = true }
loro = { version = "1.13.6", optional = true }
wincode = { version = "0.5.5", features = [
	"indexmap",
	"derive",
], optional = true }
serde = { version = "1.0.228", features = [
	"derive",
], optional = true }

#[dev-dependencies]
#proptest = "1.11.0"
