[package]
name = "universal-weave"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "Unlicense"
description = "A flexible data format intended for \"loom\" implementations."
edition = "2024"

[features]
default = [ "rkyv" ]
rkyv = [
	"dep:rkyv",
]
loro = [
	"rkyv",
	"dep:loro",
]
wincode = [
	"dep:wincode",
]
serde = [
	"dep:serde",
	"indexmap/serde",
]

# A deprecated version of DependentWeave used by `tapestry-weave`'s v0 format; Please don't use this!
legacy = [  ]


[dependencies]
contracts = { version = "0.6.7", features = [
	"override_debug",
] }
indexmap = "2.14.0"
stacksafe = "1.0.2"
rkyv = { version = "0.8.17", features = [
	"little_endian",
	"aligned",
	"pointer_width_32",
	"indexmap-2",
], optional = true }
loro = { version = "1.13.7", optional = true }
wincode = { version = "0.5.5", features = [
	"indexmap",
	"derive",
], optional = true }
serde = { version = "1.0.228", features = [
	"derive",
], optional = true }

[dev-dependencies]
proptest               = "1.11.0"
proptest-state-machine = "0.8.0"
proptest-derive        = "0.8.0"

[profile.test.build-override]
opt-level = 2

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
