[package]
name = "tapestry-weave-wasm"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "Unlicense"
description = "A WebAssembly wrapper for Tapestry Loom's document format."
edition = "2024"

[lib]
crate-type = [
	"cdylib",
	"rlib",
]

[features]
default = [
	"console_error_panic_hook",
]

[dependencies]
wasm-bindgen = "0.2.105"
console_error_panic_hook = { version = "0.1.7", optional = true }
tapestry-weave = { path = "../tapestry-weave" }
getrandom = { version = "*", features = [
	"wasm_js",
] }
serde = { version = "1.0.228", features = [
	"derive",
] }
web-time = { version = "1.1.0", features = [
	"serde",
] }
rand = "*"
tsify = { version = "0.5.6", features = [
	"js",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
strip = "symbols"
panic = "abort"
