[package]
name = "tapestry-weave"
version = "0.0.0"
authors = [
	"transkatgirl",
]
license = "Unlicense"
description = "An implementation of Tapestry Loom's document format."
edition = "2024"

[features]
serde = [
	"dep:serde",
	"ulid/serde",
	"universal-weave/serde",
]

[dependencies]
ulid = "1.2.1"
rkyv = "*"
universal-weave = { path = ".." }
serde = { version = "1.0.228", features = [
	"derive",
], optional = true }
